# alg

./: CMakeLists.txt
src/: bag.hpp  depth_first_paths.hpp  graph.hpp  stack.hpp
tests/: CMakeLists.txt  test_bag.cpp  test_depth_first_paths.cpp  test_graph.cpp  test_stack.cpp
